# pytest-serverest-study

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: pytest.yml
config/: config.json
fixtures/: __init__.py  login.py  produto.py  url_locator.py  usuario.py
fixtures/carrinho/: carrinho.py
fixtures/localizador_url/: localizador_url.py
fixtures/login/: login.py
fixtures/produto/: produto.py
fixtures/usuario/: usuario.py
fixtures/validador_schema/: validador_schema.py
model/: __init__.py  login.py  produto.py  usuario.py
model/carrinho/: carrinho.py
model/login/: login.py
model/produto/: produto.py
model/usuario/: usuario.py
schemas/login/: post.json  post_dados_invalidos.json  post_sem_dados.json
schemas/usuarios/: delete.json  delete_com_carrinho.json  get.json  post.json  post_já_existente.json  post_sem_dados.json  put.json
tests/: conftest.py
tests/carrinhos/: test_carrinhos.py  test_delete_carrinhos.py  test_get_carrinhos.py  test_post_carrinhos.py
tests/login/: test_login.py  test_schema.py
tests/product/: test_product.py
tests/produtos/: test_delete_produtos.py  test_get_produtos.py  test_post_produtos.py  test_put_produtos.py
tests/usuarios/: test_delete_usuarios.py  test_get_usuarios.py  test_post_usuarios.py  test_put_usuarios.py  test_schema.py  test_usuarios.py
utils/: __init__.py  url_locator.py
utils/localizador_url/: localizador_url.py
