[tool.poetry]
name = "pytest-serverest-study"
version = "0.1.0"
description = ""
authors = ["ltsuda <leonardo.tsuda@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.4"
pytest = "^6.1.2"
pytest-variables = "^1.9.0"
Faker = "^4.14.0"
requests = "^2.24.0"
jsonschema = "^3.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
